update before start

--- a/onedayrun-gpt5mt/nginx/nginx.conf
+++ b/onedayrun-gpt5mt/nginx/nginx.conf
@@ -34,6 +34,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Health endpoint (via backend)
+        location = /health {
+            proxy_pass http://backend/health;
+        }
+
         # WebSocket for Y.js collaboration
         location /yjs {
             proxy_pass http://yjs;
