--- a/onedayrun-gpt5mt/backend/Dockerfile
+++ b/onedayrun-gpt5mt/backend/Dockerfile
@@ -1,11 +1,22 @@
-FROM node:18-alpine
+FROM node:18-bullseye-slim
 
 WORKDIR /app
 
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends \
+    openssl \
+    ca-certificates \
+    build-essential \
+    python3 \
+  && rm -rf /var/lib/apt/lists/*
+
 COPY package*.json ./
-RUN npm ci
+RUN npm install --no-audit --no-fund
 
 COPY . .
+
+# Generate Prisma client
+RUN npx prisma generate
 
 RUN npm run build
 
