--- a/onedayrun-gpt5mt/backend/package.json
+++ b/onedayrun-gpt5mt/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "sh -c 'for i in $(seq 1 30); do npx prisma db push && break || sleep 2; done; node dist/server.js'",
     "build": "tsc",
     "dev": "nodemon src/server.ts",
     "worker": "node dist/worker.js",
@@ -39,6 +39,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/compression": "^1.7.5",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.4",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
