--- a/onedayrun-gpt5mt/docker-compose.yml
+++ b/onedayrun-gpt5mt/docker-compose.yml
@@ -1,10 +1,8 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - DATABASE_URL=postgresql://postgres:password@postgres:5432/oneday
@@ -65,17 +63,17 @@ services:
   yjs-server:
     build: ./yjs-server
     ports:
-      - "4444:4444"
+      - "${YJS_PORT:-4444}:4444"
     networks:
       - oneday-network
 
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:80"
+      - "${NGINX_PORT:-8080}:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/dist:/usr/share/nginx/html:ro
+      - ./index.html:/usr/share/nginx/html/index.html:ro
     depends_on:
       - backend
       - yjs-server
