--- a/onedayrun-gpt5mt/e2e/package.json
+++ b/onedayrun-gpt5mt/e2e/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "ws": "^8.15.0"
+    "ws": "^8.15.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/ws": "^8.5.10"
   }
 }
