update before start

--- a/onedayrun-gpt5mt/Makefile
+++ b/onedayrun-gpt5mt/Makefile
@@ -4,7 +4,7 @@ stop: docker-down
 start: docker-up
 # Simple Makefile for local dev and Docker workflows
 
-.PHONY: help install-backend install-frontend dev-backend dev-frontend frontend-build docker-build docker-up docker-down docker-logs docker-restart dev electron-install electron-start electron-prepare-dist electron-release-linux electron-release-linux-all electron-release kill-port kill-ports stop-all stop
+.PHONY: help install-backend install-frontend dev-backend dev-frontend frontend-build docker-build docker-up docker-down docker-logs docker-restart docker-ps docker-health dev electron-install electron-start electron-prepare-dist electron-release-linux electron-release-linux-all electron-release kill-port kill-ports stop-all stop e2e-install e2e-test e2e-test-keep e2e-up e2e-down
 
 # Defaults for ports if not provided by environment
 FRONTEND_PORT ?= 8089
@@ -24,6 +24,8 @@ help:
 	@echo "  stop              - alias for docker-down"
 	@echo "  docker-logs       - follow logs"
 	@echo "  docker-restart    - restart services"
+	@echo "  docker-ps         - show compose services status"
+	@echo "  docker-health     - curl /health via Nginx and backend direct"
 	@echo "  dev               - docker compose up (ports from .env: FRONTEND_PORT, BACKEND_PORT)"
 	@echo "  electron-install  - install Electron deps"
 	@echo "  electron-start    - start Electron app (ELECTRON_APP_URL to point to URL)"
@@ -33,6 +35,11 @@ help:
 	@echo "  kill-port PORT=<p> - kill any process listening on TCP port <p>"
 	@echo "  kill-ports        - kill common dev ports ($(FRONTEND_PORT), $(BACKEND_PORT), 5173, 1234)"
 	@echo "  stop-all          - docker compose down + kill-ports"
+	@echo "  e2e-install       - npm install in e2e/"
+	@echo "  e2e-test          - run full e2e (builds and runs stack)"
+	@echo "  e2e-test-keep     - run e2e and keep stack (KEEP_STACK=1)"
+	@echo "  e2e-up            - docker compose up via e2e harness"
+	@echo "  e2e-down          - docker compose down via e2e harness"
 
 install-backend:
 	bash scripts/install-backend.sh
@@ -58,6 +65,15 @@ docker-up:
 docker-down:
 	bash scripts/docker-down.sh
 
+docker-ps:
+	docker compose ps
+
+docker-health:
+	@echo "Nginx /health (NGINX_PORT=$${NGINX_PORT:-8087}):"
+	-@curl -sS http://localhost:$${NGINX_PORT:-8087}/health || true; echo
+	@echo "Backend /health direct (BACKEND_PORT=$${BACKEND_PORT:-9134}):"
+	-@curl -sS http://127.0.0.1:$${BACKEND_PORT:-9134}/health || true; echo
+
 docker-logs:
 	bash scripts/docker-logs.sh
 
@@ -69,7 +85,7 @@ dev: docker-up
 electron-install:
 	bash scripts/electron-install.sh
 
-# Run with optional ELECTRON_APP_URL, e.g. ELECTRON_APP_URL=http://localhost:8080 make electron-start
+# Run with optional ELECTRON_APP_URL, e.g. ELECTRON_APP_URL=http://localhost:8087 make electron-start
 electron-start:
 	ELECTRON_APP_URL=$${ELECTRON_APP_URL} bash scripts/electron-start.sh
 
@@ -103,3 +119,19 @@ kill-ports:
 # Stop docker services and free common dev ports
 stop-all:
 	FRONTEND_PORT=$${FRONTEND_PORT} BACKEND_PORT=$${BACKEND_PORT} bash scripts/stop-all.sh
+
+# E2E helpers
+e2e-install:
+	cd e2e && npm install
+
+e2e-test:
+	cd e2e && npm run test
+
+e2e-test-keep:
+	cd e2e && KEEP_STACK=1 npm run test
+
+e2e-up:
+	cd e2e && npm run up
+
+e2e-down:
+	cd e2e && npm run down
